src/Compiler/Parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> class_list
Rule 2     class_list -> class SEMICOLON class_list
Rule 3     class_list -> class SEMICOLON
Rule 4     class -> CLASS TYPE LBRACE features_list_opt RBRACE
Rule 5     class -> CLASS TYPE INHERITS TYPE LBRACE features_list_opt RBRACE
Rule 6     features_list_opt -> features_list
Rule 7     features_list_opt -> empty
Rule 8     features_list -> feature SEMICOLON features_list
Rule 9     features_list -> empty
Rule 10    feature -> ID LPAREN formal_params_list RPAREN COLON TYPE LBRACE expression RBRACE
Rule 11    feature -> ID LPAREN RPAREN COLON TYPE LBRACE expression RBRACE
Rule 12    feature -> ID COLON TYPE ASSIGN expression
Rule 13    feature -> ID COLON TYPE
Rule 14    formal_params_list -> formal_param COMMA formal_params_list
Rule 15    formal_params_list -> formal_param
Rule 16    formal_param -> ID COLON TYPE
Rule 17    expression -> ID
Rule 18    expression -> INTEGER
Rule 19    expression -> BOOLEAN
Rule 20    expression -> STRING
Rule 21    expression -> LBRACE block_list RBRACE
Rule 22    block_list -> expression SEMICOLON block_list
Rule 23    block_list -> expression SEMICOLON
Rule 24    expression -> ID ASSIGN expression
Rule 25    expression -> expression DOT ID LPAREN arguments_list_opt RPAREN
Rule 26    arguments_list_opt -> arguments_list
Rule 27    arguments_list_opt -> empty
Rule 28    arguments_list -> expression COMMA arguments_list
Rule 29    arguments_list -> expression
Rule 30    expression -> expression AT TYPE DOT ID LPAREN arguments_list_opt RPAREN
Rule 31    expression -> ID LPAREN arguments_list_opt RPAREN
Rule 32    expression -> expression PLUS expression
Rule 33    expression -> expression MINUS expression
Rule 34    expression -> expression MULTIPLY expression
Rule 35    expression -> expression DIVIDE expression
Rule 36    expression -> expression LT expression
Rule 37    expression -> expression LTEQ expression
Rule 38    expression -> expression EQ expression
Rule 39    expression -> LPAREN expression RPAREN
Rule 40    expression -> IF expression THEN expression ELSE expression FI
Rule 41    expression -> WHILE expression LOOP expression POOL
Rule 42    expression -> let_expression
Rule 43    let_expression -> LET formal_list IN expression
Rule 44    formal_list -> formal_list COMMA formal
Rule 45    formal_list -> formal
Rule 46    formal -> ID COLON TYPE
Rule 47    formal -> ID COLON TYPE ASSIGN expression
Rule 48    expression -> CASE expression OF actions_list ESAC
Rule 49    actions_list -> action actions_list
Rule 50    actions_list -> action
Rule 51    action -> ID COLON TYPE ARROW expression SEMICOLON
Rule 52    expression -> NEW TYPE
Rule 53    expression -> ISVOID expression
Rule 54    expression -> INT_COMP expression
Rule 55    expression -> NOT expression
Rule 56    empty -> <empty>

Terminals, with rules where they appear

ARROW                : 51
ASSIGN               : 12 24 47
AT                   : 30
BOOLEAN              : 19
CASE                 : 48
CLASS                : 4 5
COLON                : 10 11 12 13 16 46 47 51
COMMA                : 14 28 44
DIVIDE               : 35
DOT                  : 25 30
ELSE                 : 40
EQ                   : 38
ESAC                 : 48
FI                   : 40
ID                   : 10 11 12 13 16 17 24 25 30 31 46 47 51
IF                   : 40
IN                   : 43
INHERITS             : 5
INTEGER              : 18
INT_COMP             : 54
ISVOID               : 53
LBRACE               : 4 5 10 11 21
LET                  : 43
LOOP                 : 41
LPAREN               : 10 11 25 30 31 39
LT                   : 36
LTEQ                 : 37
MINUS                : 33
MULTIPLY             : 34
NEW                  : 52
NOT                  : 55
OF                   : 48
PLUS                 : 32
POOL                 : 41
RBRACE               : 4 5 10 11 21
RPAREN               : 10 11 25 30 31 39
SEMICOLON            : 2 3 8 22 23 51
STRING               : 20
THEN                 : 40
TYPE                 : 4 5 5 10 11 12 13 16 30 46 47 51 52
WHILE                : 41
error                : 

Nonterminals, with rules where they appear

action               : 49 50
actions_list         : 48 49
arguments_list       : 26 28
arguments_list_opt   : 25 30 31
block_list           : 21 22
class                : 2 3
class_list           : 1 2
empty                : 7 9 27
expression           : 10 11 12 22 23 24 25 28 29 30 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 40 40 40 41 41 43 47 48 51 53 54 55
feature              : 8
features_list        : 6 8
features_list_opt    : 4 5
formal               : 44 45
formal_list          : 43 44
formal_param         : 14 15
formal_params_list   : 10 14
let_expression       : 42
program              : 0

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . class_list
    (2) class_list -> . class SEMICOLON class_list
    (3) class_list -> . class SEMICOLON
    (4) class -> . CLASS TYPE LBRACE features_list_opt RBRACE
    (5) class -> . CLASS TYPE INHERITS TYPE LBRACE features_list_opt RBRACE

    CLASS           shift and go to state 4

    program                        shift and go to state 1
    class_list                     shift and go to state 2
    class                          shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> class_list .

    $end            reduce using rule 1 (program -> class_list .)


state 3

    (2) class_list -> class . SEMICOLON class_list
    (3) class_list -> class . SEMICOLON

    SEMICOLON       shift and go to state 5


state 4

    (4) class -> CLASS . TYPE LBRACE features_list_opt RBRACE
    (5) class -> CLASS . TYPE INHERITS TYPE LBRACE features_list_opt RBRACE

    TYPE            shift and go to state 6


state 5

    (2) class_list -> class SEMICOLON . class_list
    (3) class_list -> class SEMICOLON .
    (2) class_list -> . class SEMICOLON class_list
    (3) class_list -> . class SEMICOLON
    (4) class -> . CLASS TYPE LBRACE features_list_opt RBRACE
    (5) class -> . CLASS TYPE INHERITS TYPE LBRACE features_list_opt RBRACE

    $end            reduce using rule 3 (class_list -> class SEMICOLON .)
    CLASS           shift and go to state 4

    class                          shift and go to state 3
    class_list                     shift and go to state 7

state 6

    (4) class -> CLASS TYPE . LBRACE features_list_opt RBRACE
    (5) class -> CLASS TYPE . INHERITS TYPE LBRACE features_list_opt RBRACE

    LBRACE          shift and go to state 8
    INHERITS        shift and go to state 9


state 7

    (2) class_list -> class SEMICOLON class_list .

    $end            reduce using rule 2 (class_list -> class SEMICOLON class_list .)


state 8

    (4) class -> CLASS TYPE LBRACE . features_list_opt RBRACE
    (6) features_list_opt -> . features_list
    (7) features_list_opt -> . empty
    (8) features_list -> . feature SEMICOLON features_list
    (9) features_list -> . empty
    (56) empty -> .
    (10) feature -> . ID LPAREN formal_params_list RPAREN COLON TYPE LBRACE expression RBRACE
    (11) feature -> . ID LPAREN RPAREN COLON TYPE LBRACE expression RBRACE
    (12) feature -> . ID COLON TYPE ASSIGN expression
    (13) feature -> . ID COLON TYPE

    RBRACE          reduce using rule 56 (empty -> .)
    ID              shift and go to state 14

    features_list_opt              shift and go to state 10
    features_list                  shift and go to state 11
    empty                          shift and go to state 12
    feature                        shift and go to state 13

state 9

    (5) class -> CLASS TYPE INHERITS . TYPE LBRACE features_list_opt RBRACE

    TYPE            shift and go to state 15


state 10

    (4) class -> CLASS TYPE LBRACE features_list_opt . RBRACE

    RBRACE          shift and go to state 16


state 11

    (6) features_list_opt -> features_list .

    RBRACE          reduce using rule 6 (features_list_opt -> features_list .)


state 12

    (7) features_list_opt -> empty .
    (9) features_list -> empty .

  ! reduce/reduce conflict for RBRACE resolved using rule 7 (features_list_opt -> empty .)
    RBRACE          reduce using rule 7 (features_list_opt -> empty .)

  ! RBRACE          [ reduce using rule 9 (features_list -> empty .) ]


state 13

    (8) features_list -> feature . SEMICOLON features_list

    SEMICOLON       shift and go to state 17


state 14

    (10) feature -> ID . LPAREN formal_params_list RPAREN COLON TYPE LBRACE expression RBRACE
    (11) feature -> ID . LPAREN RPAREN COLON TYPE LBRACE expression RBRACE
    (12) feature -> ID . COLON TYPE ASSIGN expression
    (13) feature -> ID . COLON TYPE

    LPAREN          shift and go to state 18
    COLON           shift and go to state 19


state 15

    (5) class -> CLASS TYPE INHERITS TYPE . LBRACE features_list_opt RBRACE

    LBRACE          shift and go to state 20


state 16

    (4) class -> CLASS TYPE LBRACE features_list_opt RBRACE .

    SEMICOLON       reduce using rule 4 (class -> CLASS TYPE LBRACE features_list_opt RBRACE .)


state 17

    (8) features_list -> feature SEMICOLON . features_list
    (8) features_list -> . feature SEMICOLON features_list
    (9) features_list -> . empty
    (10) feature -> . ID LPAREN formal_params_list RPAREN COLON TYPE LBRACE expression RBRACE
    (11) feature -> . ID LPAREN RPAREN COLON TYPE LBRACE expression RBRACE
    (12) feature -> . ID COLON TYPE ASSIGN expression
    (13) feature -> . ID COLON TYPE
    (56) empty -> .

    ID              shift and go to state 14
    RBRACE          reduce using rule 56 (empty -> .)

    feature                        shift and go to state 13
    features_list                  shift and go to state 21
    empty                          shift and go to state 22

state 18

    (10) feature -> ID LPAREN . formal_params_list RPAREN COLON TYPE LBRACE expression RBRACE
    (11) feature -> ID LPAREN . RPAREN COLON TYPE LBRACE expression RBRACE
    (14) formal_params_list -> . formal_param COMMA formal_params_list
    (15) formal_params_list -> . formal_param
    (16) formal_param -> . ID COLON TYPE

    RPAREN          shift and go to state 25
    ID              shift and go to state 23

    formal_params_list             shift and go to state 24
    formal_param                   shift and go to state 26

state 19

    (12) feature -> ID COLON . TYPE ASSIGN expression
    (13) feature -> ID COLON . TYPE

    TYPE            shift and go to state 27


state 20

    (5) class -> CLASS TYPE INHERITS TYPE LBRACE . features_list_opt RBRACE
    (6) features_list_opt -> . features_list
    (7) features_list_opt -> . empty
    (8) features_list -> . feature SEMICOLON features_list
    (9) features_list -> . empty
    (56) empty -> .
    (10) feature -> . ID LPAREN formal_params_list RPAREN COLON TYPE LBRACE expression RBRACE
    (11) feature -> . ID LPAREN RPAREN COLON TYPE LBRACE expression RBRACE
    (12) feature -> . ID COLON TYPE ASSIGN expression
    (13) feature -> . ID COLON TYPE

    RBRACE          reduce using rule 56 (empty -> .)
    ID              shift and go to state 14

    features_list_opt              shift and go to state 28
    features_list                  shift and go to state 11
    empty                          shift and go to state 12
    feature                        shift and go to state 13

state 21

    (8) features_list -> feature SEMICOLON features_list .

    RBRACE          reduce using rule 8 (features_list -> feature SEMICOLON features_list .)


state 22

    (9) features_list -> empty .

    RBRACE          reduce using rule 9 (features_list -> empty .)


state 23

    (16) formal_param -> ID . COLON TYPE

    COLON           shift and go to state 29


state 24

    (10) feature -> ID LPAREN formal_params_list . RPAREN COLON TYPE LBRACE expression RBRACE

    RPAREN          shift and go to state 30


state 25

    (11) feature -> ID LPAREN RPAREN . COLON TYPE LBRACE expression RBRACE

    COLON           shift and go to state 31


state 26

    (14) formal_params_list -> formal_param . COMMA formal_params_list
    (15) formal_params_list -> formal_param .

    COMMA           shift and go to state 32
    RPAREN          reduce using rule 15 (formal_params_list -> formal_param .)


state 27

    (12) feature -> ID COLON TYPE . ASSIGN expression
    (13) feature -> ID COLON TYPE .

    ASSIGN          shift and go to state 33
    SEMICOLON       reduce using rule 13 (feature -> ID COLON TYPE .)


state 28

    (5) class -> CLASS TYPE INHERITS TYPE LBRACE features_list_opt . RBRACE

    RBRACE          shift and go to state 34


state 29

    (16) formal_param -> ID COLON . TYPE

    TYPE            shift and go to state 35


state 30

    (10) feature -> ID LPAREN formal_params_list RPAREN . COLON TYPE LBRACE expression RBRACE

    COLON           shift and go to state 36


state 31

    (11) feature -> ID LPAREN RPAREN COLON . TYPE LBRACE expression RBRACE

    TYPE            shift and go to state 37


state 32

    (14) formal_params_list -> formal_param COMMA . formal_params_list
    (14) formal_params_list -> . formal_param COMMA formal_params_list
    (15) formal_params_list -> . formal_param
    (16) formal_param -> . ID COLON TYPE

    ID              shift and go to state 23

    formal_param                   shift and go to state 26
    formal_params_list             shift and go to state 38

state 33

    (12) feature -> ID COLON TYPE ASSIGN . expression
    (17) expression -> . ID
    (18) expression -> . INTEGER
    (19) expression -> . BOOLEAN
    (20) expression -> . STRING
    (21) expression -> . LBRACE block_list RBRACE
    (24) expression -> . ID ASSIGN expression
    (25) expression -> . expression DOT ID LPAREN arguments_list_opt RPAREN
    (30) expression -> . expression AT TYPE DOT ID LPAREN arguments_list_opt RPAREN
    (31) expression -> . ID LPAREN arguments_list_opt RPAREN
    (32) expression -> . expression PLUS expression
    (33) expression -> . expression MINUS expression
    (34) expression -> . expression MULTIPLY expression
    (35) expression -> . expression DIVIDE expression
    (36) expression -> . expression LT expression
    (37) expression -> . expression LTEQ expression
    (38) expression -> . expression EQ expression
    (39) expression -> . LPAREN expression RPAREN
    (40) expression -> . IF expression THEN expression ELSE expression FI
    (41) expression -> . WHILE expression LOOP expression POOL
    (42) expression -> . let_expression
    (48) expression -> . CASE expression OF actions_list ESAC
    (52) expression -> . NEW TYPE
    (53) expression -> . ISVOID expression
    (54) expression -> . INT_COMP expression
    (55) expression -> . NOT expression
    (43) let_expression -> . LET formal_list IN expression

    ID              shift and go to state 39
    INTEGER         shift and go to state 41
    BOOLEAN         shift and go to state 42
    STRING          shift and go to state 43
    LBRACE          shift and go to state 44
    LPAREN          shift and go to state 45
    IF              shift and go to state 46
    WHILE           shift and go to state 47
    CASE            shift and go to state 49
    NEW             shift and go to state 50
    ISVOID          shift and go to state 51
    INT_COMP        shift and go to state 52
    NOT             shift and go to state 53
    LET             shift and go to state 54

    expression                     shift and go to state 40
    let_expression                 shift and go to state 48

state 34

    (5) class -> CLASS TYPE INHERITS TYPE LBRACE features_list_opt RBRACE .

    SEMICOLON       reduce using rule 5 (class -> CLASS TYPE INHERITS TYPE LBRACE features_list_opt RBRACE .)


state 35

    (16) formal_param -> ID COLON TYPE .

    COMMA           reduce using rule 16 (formal_param -> ID COLON TYPE .)
    RPAREN          reduce using rule 16 (formal_param -> ID COLON TYPE .)


state 36

    (10) feature -> ID LPAREN formal_params_list RPAREN COLON . TYPE LBRACE expression RBRACE

    TYPE            shift and go to state 55


state 37

    (11) feature -> ID LPAREN RPAREN COLON TYPE . LBRACE expression RBRACE

    LBRACE          shift and go to state 56


state 38

    (14) formal_params_list -> formal_param COMMA formal_params_list .

    RPAREN          reduce using rule 14 (formal_params_list -> formal_param COMMA formal_params_list .)


state 39

    (17) expression -> ID .
    (24) expression -> ID . ASSIGN expression
    (31) expression -> ID . LPAREN arguments_list_opt RPAREN

    DOT             reduce using rule 17 (expression -> ID .)
    AT              reduce using rule 17 (expression -> ID .)
    PLUS            reduce using rule 17 (expression -> ID .)
    MINUS           reduce using rule 17 (expression -> ID .)
    MULTIPLY        reduce using rule 17 (expression -> ID .)
    DIVIDE          reduce using rule 17 (expression -> ID .)
    LT              reduce using rule 17 (expression -> ID .)
    LTEQ            reduce using rule 17 (expression -> ID .)
    EQ              reduce using rule 17 (expression -> ID .)
    SEMICOLON       reduce using rule 17 (expression -> ID .)
    RPAREN          reduce using rule 17 (expression -> ID .)
    THEN            reduce using rule 17 (expression -> ID .)
    LOOP            reduce using rule 17 (expression -> ID .)
    OF              reduce using rule 17 (expression -> ID .)
    RBRACE          reduce using rule 17 (expression -> ID .)
    COMMA           reduce using rule 17 (expression -> ID .)
    ELSE            reduce using rule 17 (expression -> ID .)
    POOL            reduce using rule 17 (expression -> ID .)
    FI              reduce using rule 17 (expression -> ID .)
    IN              reduce using rule 17 (expression -> ID .)
    ASSIGN          shift and go to state 57
    LPAREN          shift and go to state 58


state 40

    (12) feature -> ID COLON TYPE ASSIGN expression .
    (25) expression -> expression . DOT ID LPAREN arguments_list_opt RPAREN
    (30) expression -> expression . AT TYPE DOT ID LPAREN arguments_list_opt RPAREN
    (32) expression -> expression . PLUS expression
    (33) expression -> expression . MINUS expression
    (34) expression -> expression . MULTIPLY expression
    (35) expression -> expression . DIVIDE expression
    (36) expression -> expression . LT expression
    (37) expression -> expression . LTEQ expression
    (38) expression -> expression . EQ expression

    SEMICOLON       reduce using rule 12 (feature -> ID COLON TYPE ASSIGN expression .)
    DOT             shift and go to state 59
    AT              shift and go to state 60
    PLUS            shift and go to state 61
    MINUS           shift and go to state 62
    MULTIPLY        shift and go to state 63
    DIVIDE          shift and go to state 64
    LT              shift and go to state 65
    LTEQ            shift and go to state 66
    EQ              shift and go to state 67


state 41

    (18) expression -> INTEGER .

    DOT             reduce using rule 18 (expression -> INTEGER .)
    AT              reduce using rule 18 (expression -> INTEGER .)
    PLUS            reduce using rule 18 (expression -> INTEGER .)
    MINUS           reduce using rule 18 (expression -> INTEGER .)
    MULTIPLY        reduce using rule 18 (expression -> INTEGER .)
    DIVIDE          reduce using rule 18 (expression -> INTEGER .)
    LT              reduce using rule 18 (expression -> INTEGER .)
    LTEQ            reduce using rule 18 (expression -> INTEGER .)
    EQ              reduce using rule 18 (expression -> INTEGER .)
    SEMICOLON       reduce using rule 18 (expression -> INTEGER .)
    RPAREN          reduce using rule 18 (expression -> INTEGER .)
    THEN            reduce using rule 18 (expression -> INTEGER .)
    LOOP            reduce using rule 18 (expression -> INTEGER .)
    OF              reduce using rule 18 (expression -> INTEGER .)
    RBRACE          reduce using rule 18 (expression -> INTEGER .)
    COMMA           reduce using rule 18 (expression -> INTEGER .)
    ELSE            reduce using rule 18 (expression -> INTEGER .)
    POOL            reduce using rule 18 (expression -> INTEGER .)
    FI              reduce using rule 18 (expression -> INTEGER .)
    IN              reduce using rule 18 (expression -> INTEGER .)


state 42

    (19) expression -> BOOLEAN .
